# trading_simulator

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  main.rs  models.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  AppRouter.tsx  CoinMarketTable.tsx  CurrencyDetailPage.tsx
src/: db.rs  main.rs  models.rs
