[package]
name = "trading_simulator_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json"] }
dotenv = "0.15"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
websocket = "0.24.0"